# CICD_SoK_Evaluators

./: CMakeLists.txt  README.md
.github/workflows/: anomalous_request.yaml  complex_cmd_inj.yaml  install_known_bad_dep.yaml  logging_secret_leak.yaml  pin_a_bad_dep.yaml  simple_cmd_inj.yaml  upinned_dep.yaml
src/: apt-list.txt
src/cipher/: cipher.py
src/injection/: code.sh
src/lib_unpinned/: evil_lib_unpinned.c  lib_unpinned.c
src/lib_unpinned/include/: lib_unpinned.h
src/unpinned_dep/: CMakeLists.txt  main.c
